--- a/app/core/templates/core/tanklevels.html
+++ b/app/core/templates/core/tanklevels.html
@@ -13,7 +13,8 @@
 <!-- Body Blocks -->
 {% block content %}
     <style>
-        body {margin-top: 6rem; margin-left: 4rem;}
+        body {margin-top: 6rem; margin-left: 2rem;}
+        tr[data-id='15 J'],tr[data-id='01 1']{display:none;}
     </style>
     <div id="headerDiv">
         <h1>Tank Levels</h1>
