--- a/app/static/core/countlist.css
+++ b/app/static/core/countlist.css
@@ -24,6 +24,7 @@ input[name*='counted_date'] {
     height: 24px;
     background-color: transparent;
     border: none;
+    
 }
 
 input[name*='variance'] {
@@ -31,4 +32,9 @@ input[name*='variance'] {
     height: 24px;
     background-color: transparent;
     border: none;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    display: none; 
 }
